Fixed DesktopPetProfile.css that is causing UI to break in other pages.

--- a/src/pages/DesktopPetProfile.css
+++ b/src/pages/DesktopPetProfile.css
@@ -12,9 +12,16 @@ h3 {
     color: black;
 }
 
+.dateButton {
+    color: antiquewhite;
+    background-color: #B0C4B1;
+    min-width: 100px;
+    max-width: 100px;
+    border-radius: 5px;
+    border: none;
+}
 
-
-button {
+#goToMed {
     color: antiquewhite;
     background-color: #B0C4B1;
     min-width: 100px;
